# parallize

./: README.md  pyproject.toml
parallize/: __init__.py
tests/: test_aparallize.py  test_parallize.py
utils/: __init__.py
